<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="super_duo1">FOOTBALL SCORES</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_termination">BUILD IT BIGGER</string>
    <string name="materialize">BACON READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
