<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.deepakt.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="30dp"
        android:textSize="22sp"
        android:text="@string/my_title" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Button"
        android:id="@+id/button"
        android:layout_below="@id/textView"
        android:text="@string/media_streamer"
        android:onClick="displayMessage" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Button"
        android:id="@+id/button1"
        android:layout_below="@id/button"
        android:text="@string/super_duo1"
        android:onClick="displayMessage1" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Button"
        android:id="@+id/button2"
        android:layout_below="@id/button1"
        android:text="@string/super_duo2"
        android:onClick="displayMessage2" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Button"
        android:id="@+id/button3"
        android:layout_below="@id/button2"
        android:text="@string/ant_termination"
        android:onClick="displayMessage3" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Button"
        android:id="@+id/button4"
        android:layout_below="@id/button3"
        android:text="@string/materialize"
        android:onClick="displayMessage4" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Button"
        android:id="@+id/button5"
        android:layout_below="@id/button4"
        android:text="@string/capstone"
        android:background="#D81B60"
        android:onClick="displayMessage5" />

</RelativeLayout>
